--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 
     <!-- Conteúdo Principal -->
     <div class="game-container">
-        <button class="button-image campo-minado" onclick="window.open('https://jpfachina01.github.io/jonhsbet-campominado/', '_blank')">
+        <button class="button-image campo-minado" onclick="window.open('https://jonhsbet.github.io/campominado/', '_blank')">
             <div class="button-title">Campo Minado</div>
         </button>
-        <button class="button-image slot-machine" onclick="window.open('https://jpfachina01.github.io/Jonhsbet-Slotmachine/', '_blank')">
+        <button class="button-image slot-machine" onclick="window.open('https://jonhsbet.github.io/Slotmachine/', '_blank')">
             <div class="button-title">Slot Machine</div>
         </button>
     </div>
