--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <button class="button-image slot-machine" onclick="window.open('https://jonhsbet.github.io/Slotmachine/', '_blank')">
             <div class="button-title">Slot Machine</div>
         </button>
-        <button class="button-image slot-machine" onclick="window.open('https://jonhsbet.github.io/Blackjack/', '_blank')">
+        <button class="button-image blackj" onclick="window.open('https://jonhsbet.github.io/Blackjack/', '_blank')">
             <div class="button-title">Blackjack</div>
         </button>
     </div>
