--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </head>
 <body>
     <!-- Barra Superior -->
-    <div class="top-bar">JonhsBet - Jogos</div>
+    <div class="top-bar">JonhsBet</div>
 
     <!-- Conteúdo Principal -->
     <div class="game-container">
