--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </head>
 <body>
     <!-- Barra Superior -->
-    <div class="top-bar"><a href="https://jpg5.su/img/aLNKk9c"><img src="https://simp6.jpg5.su/images3/Jonhsbet-1e4378a890b0154ee.th.png" alt="Jonhsbet-1e4378a890b0154ee.th.png" border="0"></a>" border="0"></div>
+    <div class="top-bar"><img src="https://simp6.jpg5.su/images3/Jonhsbet-1e4378a890b0154ee.th.png" alt="Jonhsbet-1e4378a890b0154ee.th.png" border="0">" border="0"></div>
 
     <!-- Conteúdo Principal -->
     <div class="game-container">
