--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         }
         /* Barra Superior */
         .top-bar {
-            width: 80%;
+            width: 70%;
             background-color: rgba(0, 0, 0, 0.7);
             padding: 15px;
             font-size: 1.5rem;
-            color: #ffffff;
+            color: #B2B2B2;
             text-align: left;
             position: fixed;
             top: 0;
