--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JonhsBet</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+            body {
+            font-family: 'Arial', sans-serif;
             background-image: url('https://static.vecteezy.com/ti/vetor-gratis/p1/11879866-cartas-de-baralho-de-cassino-e-fichas-de-poquer-em-fundo-azul-vista-superior-vetor.jpg');
             background-size: cover;
             background-position: center;
@@ -18,34 +18,50 @@
             flex-direction: column;
             align-items: center;
         }
+
         /* Barra Superior */
         .top-bar {
             width: 100%;
             background-color: rgba(0, 0, 0, 0.7);
-            padding: 10px;
-            font-size: 1.5rem;
+            padding: 15px;
+            font-size: 1.6rem;
             color: #B2B2B2;
             text-align: left;
             position: fixed;
             top: 0;
             left: 0;
+            z-index: 10;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
         }
-        /* Configurações dos botões */
+
+        /* Container de botões */
         .game-container {
             display: flex;
             justify-content: center;
-            gap: 20px;
-            margin-top: 100px;
+            gap: 30px;
+            margin-top: 120px; /* Ajuste para a barra fixa não sobrepor */
+            padding: 20px;
+            flex-wrap: wrap; /* Permite que os botões se ajustem conforme o tamanho da tela */
         }
+
+        /* Estilos dos botões de imagem */
         .button-image {
-            width: 120px;
-            height: 120px;
+            width: 150px;
+            height: 150px;
             background-size: cover;
             border: none;
             position: relative;
             cursor: pointer;
             border-radius: 10px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
+
+        /* Efeito ao passar o mouse sobre o botão */
+        .button-image:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+        }
+
         /* Título do Jogo */
         .button-title {
             position: absolute;
@@ -53,11 +69,17 @@
             width: 100%;
             background-color: rgba(0, 0, 0, 0.7);
             color: white;
-            font-size: 0.9rem;
+            font-size: 1rem;
             font-weight: bold;
             text-align: center;
             padding: 5px;
             border-radius: 0 0 10px 10px;
+            transition: background-color 0.3s ease;
+        }
+
+        /* Efeito de hover no título do botão */
+        .button-image:hover .button-title {
+            background-color: rgba(0, 0, 0, 0.9);
         }
         .campo-minado {
             background-image: url('https://play-lh.googleusercontent.com/jyZpqVZ6l75SLAc8hBc6blhSMcr9IhANkp4hV5jiQsI8nI2sWnzr9TXr4Zs3fdsxHlA');
